--- a/_posts/2024-1-16-Sec+.md
+++ b/_posts/2024-1-16-Sec+.md
@@ -1,6 +1,6 @@
 ---
 layout: blogpost
-title: My Experience with Security +
+title: My Experience with Security+
 image: /assets/images/comptia-security-plus.png
 ---
 ![Security + ce Certification Badge]({{ page.image }})
@@ -8,14 +8,14 @@ image: /assets/images/comptia-security-plus.png
 ## CompTIA Security + (SY0-701)
 I bet if you found this blog, you already have an idea of what Security + is. To keep it short, I'll say it's a vendor-neutral certification from [CompTIA](https://comptia.org).
 
-This certification in my point of view and even many others within the field see it as a standard for entry level positions. Some can find it difficult and some don't but what a steady study habit, I think anyone could complete and pass this exam. Even if you fail, take a step back and review places you need more work on and keep the topics you already know fresh as well. Slow and Steady can win the race.
+This certification in my point of view and even many others within the field see it as a standard for entry level positions. Some can find it difficult and some don't but what a steady study habit, I think anyone could pass this exam. Even if you fail, take a step back and review places you need more work on and keep the topics you already know fresh as well. Slow and Steady can win the race.
 
 ### Was it Hard?
 I stressed myself over this certification because I was scared of failing and wasting the money I spent on this certification. In the end, I was like a quarter of the way through the exam and I felt relief as I was overprepared and could easily answer enough question to get a passing score and better. Side note too, I'm a college graduate with a degree in Cybersecurity therefore I had four years of education experience before taking this certification.
 
 The exam is a max of 90 questions, mixed of multiple choice and performanced based questions. But that doesn't mean you'll get 90 questions, it just means you could. Less questions usually means questions are worth more points and less chance to lose out on points by getting more questions wrong from having more questions.
 
-When comparing it from the previous version to the newest version, SY0-601 vs. SY0-701. All the studying was nearing the same. The SY0-601 has more compliance and practical specifics as the SY0-701 has more emerging technologies like cloud, automation, and new risk, vulnerabilities and strategy standards as the world of cyber continues to develop.
+When comparing the previous version to the newest version, SY0-601 vs. SY0-701. All the studying material I found was basically the same. The SY0-601 has more compliance and practical specifics as the SY0-701 has more emerging technologies like cloud, automation, and new risk, vulnerabilities and strategy standards as the world of cyber continues to develop.
 
 ---
 
