Adding new post
Add msf blog and how I started using to for payloads and C2

--- a/_posts/2023-12-30-HavocC2.md
+++ b/_posts/2023-12-30-HavocC2.md
@@ -100,9 +100,9 @@ After executing the payload on the victims machine, click the "View" tab again a
 
 ---
 
-## Results
+## Conclusion
 Rough landing but once everything was set up and in place, I could control see all the processes and files of the Windows 11 VM from the Havoc C2 Teamserver. 
 
 I'm sorry if this looks like a mess of a tutoral. This is just my steps of how I did and what I've been learning about for a general understanding of how red teaming is like at different stages of offensive framework.
 
-Link to [Part 2 - Introduction to Metasploit C2](/MetasploitC2)
+Link to [Part 2 - Introduction to Metasploit C2](/msfC2)
