Edits + Additions: March 7th 2024
New post: Kerberoasting + more,
New blog browser format, &
More minor adjustments

--- a/_posts/2024-1-16-Sec+.md
+++ b/_posts/2024-1-16-Sec+.md
@@ -6,7 +6,7 @@ image: /assets/images/comptia-security-plus.png
 ![Security + ce Certification Badge]({{ page.image }})
 
 ## CompTIA Security+ (SY0-701)
-I bet if you found this blog, you already have an idea of what Security+ is. To keep it short, I'll say it's a security vendor-neutral certification from [CompTIA](https://comptia.org).
+I bet if you found this blog, you already have an idea of what Security+ is. To keep it short, I'll say it's a security vendor-neutral certification from [CompTIA](https://comptia.org){:target="_blank"}.
 
 In my point of view and even many others within the field see Security+ as a standard for entry level positions. It can be difficult for some and not for others but a steady study habit, I think anyone could pass this exam. Even if you fail, you can just take a step back and review the domains you need more work on and keep everything else fresh in your mind as well.
 
@@ -23,19 +23,19 @@ When comparing SY0-601 to SY0-701. All the studying material I found was basical
 The links below are resources I used below and I would like to share them for those reading this.
 
 ### Quizlets
-- [300+ Flashcards of Acronyms](https://www.quizlet.com/843786927/security-sy0-701-flash-cards/)
+- [300+ Flashcards of Acronyms](https://www.quizlet.com/843786927/security-sy0-701-flash-cards/){:target="_blank"}
 
-- [100+ Flashcards of Definitions](https://www.quizlet.com/839490012/sec-plus-flash-cards/)
+- [100+ Flashcards of Definitions](https://www.quizlet.com/839490012/sec-plus-flash-cards/){:target="_blank"}
 
-- [25+ Flashcards of Ports](https://www.quizlet.com/867686940/sy0-701-ports-flash-cards/)
+- [25+ Flashcards of Ports](https://www.quizlet.com/867686940/sy0-701-ports-flash-cards/){:target="_blank"}
 
 ### Practice Exam
-- 300+ Practice Questions on [Crucial Exams](https://www.crucialexams.com/exams/comptia/security/sy0-701)
+- 300+ Practice Questions on [Crucial Exams](https://www.crucialexams.com/exams/comptia/security/sy0-701){:target="_blank"}
 
 ### Performance Based Questions (PBQs)
-- A single offical CompTIA PBQ at [simulation.comptia.org](https://simulation.comptia.org)
+- A single offical CompTIA PBQ at [simulation.comptia.org](https://simulation.comptia.org){:target="_blank"}
 
-- Cyberkraft, a cybersecurity training youtuber, provides many good examples of PBQs from CompTIA on his [youtube channel](https://www.youtube.com/@cyberkraft539)
+- Cyberkraft, a cybersecurity training youtuber, provides many good examples of PBQs from CompTIA on his [youtube channel](https://www.youtube.com/@cyberkraft539){:target="_blank"}
 
 ---
 
